# PromptAlchemy

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
core/: file_watcher.py  llm_client.py  parser.py  resolver.py  types.py  wildcard_index.py
example_workflows/: basic_random.json  batch_sequential.json  combined_prompts.json  full_pipeline.json  llm_expansion.json  variables_and_wildcards.json
nodes/: llm_expander.py  prompt_combiner.py  prompt_logger.py  prompt_template.py  variables.py  wildcard_manager.py
tests/: test_combiner.py  test_expand_markers.py  test_file_watcher.py  test_fixes.py  test_llm_client.py  test_logger.py  test_parser.py  test_resolver.py  test_variables.py  test_wildcard_index.py
wildcards/: art_styles.txt  colors.yaml  compositions.txt  lighting.yaml  materials.yaml  moods.txt  quality_boosters.txt
wildcards/characters/: archetypes.yaml  mythological.yaml
wildcards/environments/: indoor.yaml  outdoor.yaml
wildcards/environments/outdoor/: seasons.yaml  weather.yaml
wildcards/scenes/: portrait_builder.yaml
wildcards/themes/: fantasy.yaml  scifi.yaml
